 ** (r508) Processor DOGTAGUNIT should now fire its own event instead of firing CONDITION's event
 ** (r510) TellMeWhen_Options-r509\ImportExport.lua:384: attempt to index local "editbox" (a nil value)
 ** (r512) Attempted to soothe Something bad happened! errors. If they continue to happen, please report them, as they actually indicate something is going wrong now.

===v5.0.2===
 * Bug Fixes:
 ** (r485) (Condition): attempt to call global "GetEclipseDirection" (a nil value)

===v5.0.1===
 * Bug Fixes:
 ** (r483) Unit Cooldown icons checking spells by name should now function properly.
 ** (r483) Cooldown sweeps and other icon components are no longer anonymous frames, returning to their previous nomenclature appended by an underscore and the icon's view type (Currently only "icon", more coming soon)
 ** (r483) Fixed a faulty upgrade of the "PassThrough" setting when upgrading past 50035. Settings that already had this faulty upgrade occur may notice that the "Pass Through" setting on some of their events was toggled from checked to unchecked.

===v5.0.0===
 * Super cool changes:
 ** All icon types have been changed to be entirely event based, meaning that they will no longer update themselves when they don't need to, resulting in a (tremendous) performance increase.
 ** The Condition engine has been completely rewritten and is now almost entirely event driven, resulting in another (tremendous) performance increase.
 ** Events have been completely rewritten to allow an unlimited amount of handlers to be created for an icon (instead of one text, one sound, and one animation per event per icon as previously).
 ** You can now sort all of the icons of a group based on attributes like duration, stacks, and opacity.

 * Pretty cool changes:
 ** You can now check units relative to the special condition unit '%u' (//for example, '%u-target' or '%upettarget'//).
 ** There is now an option (enabled by default) to color the names of units in text displays and outputs.